# spotify-saver

./: .bumpver.toml  .dockerignore  .env.example  .example.env  .gitignore  API_IMPLEMENTATION_SUMMARY.md  Dockerfile  README.md  README_ES.md  SPOTIFYSAVER_UI_SUMMARY.md  docker-compose.development.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion.md  discussion.yml  documentation_request.md  documentation_request.yml  feature_request.md  feature_request.yml  integration_request.md  integration_request.yml  rfc.md  rfc.yml
.github/workflows/: docker-build.yml  python-publish.yml
spotifysaver/: __init__.py  __main__.py
spotifysaver/api/: README.md  __init__.py  app.py  config.py  examples.py  main.py  schemas.py
spotifysaver/api/routers/: __init__.py  download.py
spotifysaver/api/services/: __init__.py  download_service.py
spotifysaver/apis/: __init__.py  lrclib_api.py  spotify_api.py  youtube_api.py
spotifysaver/cli/: __init__.py  cli.py
spotifysaver/cli/commands/: __init__.py  init.py  version.py
spotifysaver/cli/commands/download/: __init__.py  album.py  download.py  playlist.py  track.py
spotifysaver/cli/commands/inspect/: __init__.py  album_info.py  inspect.py  playlist_info.py  track_info.py
spotifysaver/cli/commands/log/: __init__.py  log.py
spotifysaver/config/: __init__.py  setting_environment.py
spotifysaver/downloader/: __init__.py  image_downloader.py  youtube_downloader.py  youtube_downloader_for_cli.py
spotifysaver/enums/: __init__.py  audio_formats_enum.py  bitrates_enum.py
spotifysaver/metadata/: __init__.py  music_file_metadata.py  nfo_generator.py  the_audio_db_service.py
spotifysaver/models/: __init__.py  album.py  artist.py  playlist.py  track.py
spotifysaver/services/: __init__.py  audiodb_parser.py  lrclib_api.py  score_match_calculator.py  spotify_api.py  the_audio_db_service.py  youtube_api.py
spotifysaver/services/errors/: errors.py
spotifysaver/services/schemas/: __init__.py  album_audiodb_schema.py  artist_audiodb_schema.py  track_audiodb_schema.py
spotifysaver/spotlog/: __init__.py  log_config.py  logger.py  ydd_logger.py
spotifysaver/ui/: README.md  __init__.py  config.py  index.html  main.py  server.py
spotifysaver/ui/frontend/: api-client.js  app.js  download-manager.js  index.html  script.js  styles.css  ui-manager.js
spotifysaver/ui/server/: __init__.py  http_handler.py  run_server.py  ui_server.py
spotifysaver/ui/static/css/: styles.css
spotifysaver/ui/static/js/: state-manager.js  ui-manager.js
src/: __init__.py
src/apis/: __init__.py  lrclib_api.py  spotify_api.py  youtube_api.py
src/apis/errors/: errors.py
src/cli/: __init__.py  cli.py
src/config/: setting_environment.py
src/downloader/: __init__.py  youtube_downloader.py
src/metadata/: __init__.py  nfo_generator.py
src/models/: __init__.py  track.py
src/spotify/: __init__.py  spotify_api.py
src/spotify/models/: artist.py  track.py
src/spotlog/: __init__.py  log_config.py  logger.py
testing/: testig_download_playlists.py  testing_playlist_spotify_data.py  testing_spotify_api.py  testing_theaudiodb_wrapper.py  testing_youtube_downloader.py
