[tool.poetry]
name = "spotifysaver"
version = "0.1.3"
description = "Download Spotify tracks via YouTube Music"
authors = ["Gabriel Baute <gabrielbaute@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.22.0"
yt-dlp = "^2023.7.6"
ytmusicapi = "^1.0.0"
requests = "^2.31.0"
click = "^8.1.3"
pydantic = "^2.0"

[tool.poetry.scripts]
spotifysaver = "src.cli.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
